--- a/app/views/data/all_records.html.erb
+++ b/app/views/data/all_records.html.erb
@@ -13,7 +13,7 @@
 	</br>
 	</br>
 	<%= select_tag(:tablename, options_for_select(@tables)) %>
-	<%= check_box_tag :csv %>
+	<%= check_box_tag :csv,1,true %>
 	<%= label_tag(:csv, "CSV?") %>
 	<br />
 	<br />
