--- a/app/views/data/all_records.html.erb
+++ b/app/views/data/all_records.html.erb
@@ -1,15 +1,12 @@
 <div class="form-container">
 <h2>Get Infusionsoft Tables</h2>
 <%= form_tag({action: :get_records}, multipart: true) do %>
-	<%= label_tag(:appname, "Infusionsoft Application Name: ") %>
 	</br>
-	<%= text_field_tag :appname %>
+	<%= text_field_tag :appname, nil, placeholder: 'appname' %>
 	.infusionsoft.com
 	</br>
 	</br>
-	<%= label_tag(:apikey, "Infusionsoft API key: ") %>
-	</br>
-	<%= text_field_tag :apikey %>
+	<%= text_field_tag :apikey, nil, placeholder: 'API Key' %>
 	</br>
 	</br>
 	<%= select_tag(:tablename, options_for_select(@tables)) %>
@@ -17,6 +14,6 @@
 	<%= label_tag(:csv, "CSV?") %>
 	<br />
 	<br />
-	<%= submit_tag("Request Tables") %>
+	<%= button_tag "Request Tables" %>
 <% end %>
 </div>
