--- a/app/assets/stylesheets/data.scss
+++ b/app/assets/stylesheets/data.scss
@@ -28,6 +28,13 @@ button[type="submit"] {
   font-weight: bold;
 }
 
+#github {
+  text-align: center;
+  display: block;
+}
+
+/* PLACEHOLDER SYLTING */
+
 ::-webkit-input-placeholder {
    text-align: center;
 }
