--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,5 +10,7 @@
 
   <body>
     <%= yield %>
+    <br />
+    <a href="https://github.com/joshfullmer/InfusionsoftAPITools" target="_blank"><span id="github">GitHub and Instructions</span></a>
   </body>
 </html>
